# freecaster-grid

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md  compose.yaml  config.schema.json  config.test.yaml  config.test2.yaml  config.test3.yaml  docker-entrypoint.sh  rust-toolchain.toml
.github/workflows/: cleanup-pr-images.yml  docker-publish.yml  release.yml  rust.yml
examples/: centralized-config-demo.sh  centralized-grid-config.yaml  compose.yaml  config-schema.yaml  grid-config.yaml  legacy-config.yaml  local-config.yaml
scripts/: check_cargo_version.py  gen_docker_pr_preview.py  update_cargo_version.py
src/: config.rs  json_schema.rs  main.rs  poller.rs
src/webui/: app.js  index.html  style.css
