[package]
name = "freecaster-grid"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { version = "1.0.219", features = ["derive"] }
serde_yml = "0.0.12"
serde_json = "1.0.140"
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }
tokio = { version = "1", features = ["fs", "net", "rt", "rt-multi-thread", "macros"] }
rouille = { version = "3.6.2", features = ["rustls"] }
anyhow = "1.0.98"
rand = "0.9.1"
telegram_notifyrs = "0.1.3"
dotenvy = "0.15.7"
