[package]
name = "freecaster-grid"
version = "0.2.0"
edition = "2024"

[dependencies]
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.145"
serde_norway = "0.9.42"
reqwest = { version = "0.12", features = [
    "json",
    "rustls-tls",
], default-features = false }
tokio = { version = "1", features = [
    "fs",
    "net",
    "rt",
    "rt-multi-thread",
    "macros",
] }
rouille = { version = "3.6.2", features = ["rustls"] }
anyhow = "1.0.100"
rand = "0.9.2"
telegram_notifyrs = "0.1.3"
dotenvy = "0.15.7"
log = { version = "0.4.28", features = ["std", "release_max_level_trace"] }
env_logger = "0.11.8"
chrono = { version = "0.4.42", features = ["serde"] }
humantime = "2.3.0"
humantime-serde = "1.1.1"
config = { version = "0.15.17", default-features = false, features = [
    "convert-case",
    "yaml",
] }
schemars = { version = "1.0.4", optional = true }

[features]
json_schema = ["dep:schemars"]
